# elevation_mapping

elevation_mapping/: CMakeLists.txt
elevation_mapping/config/: normal_filter.yaml
elevation_mapping/config/sensor_processors/: perfect.yaml  realsense_d435.yaml  realsense_rs200_gazebo.yaml  velodyne_16.yaml  velodyne_HDL-32E.yaml
elevation_mapping/include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp
elevation_mapping/include/elevation_mapping/sensor_processors/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructuredLightSensorProcessor.hpp
elevation_mapping/src/: ConstantElevationMap.cpp  ElevationMap.cpp  ElevationMapping.cpp
elevation_mapping/src/sensor_processors/: LaserSensorProcessor.cpp  SensorProcessorBase.cpp
elevation_mapping_demos/: CMakeLists.txt  package.xml
elevation_mapping_demos/config/: normal_filter.yaml  normal_filter_viz.yaml
elevation_mapping_demos/config/elevation_maps/: mat6_map.yaml
elevation_mapping_demos/config/robots/: mat6_robot.yaml
elevation_mapping_demos/include/: normal_filter.h
elevation_mapping_demos/launch/: mat6.launch  normal_filter.launch
elevation_mapping_demos/rviz/: elevation_map_visualization.rviz
elevation_mapping_demos/src/: normal_filter.cpp
